@@ -17,16 +17,13 @@ my $prereqs = {
       File::HomeDir::Unix => 0.86,
             File::Tempdir => 0.02,
                 GlobalDBI => 0.21,
-                 IO::File => 1.14,
-               JSON::Syck => 0.29,
-     Lexical::Persistence => 0.98,
+               IO::Handle => 1.14,
             Math::VecStat => 0.08,
               Net::Syslog => 0.03,
                Parse::RPN => 2.43,
                       Rcs => 1.05,
              Scalar::Util => 1.19,
             Sys::Hostname => 1.11,
-           Term::ReadLine => 1,
                Test::More => 0.86,
               Time::HiRes => 1.9711,
               Time::Piece => 1.12,
